--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "konva": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-konva": "^17.0.2-5",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-sortable-hoc": "^2.0.0",
+    "sass": "^1.45.0",
+    "use-image": "^1.0.8",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
